--- a/public/find-die.html
+++ b/public/find-die.html
@@ -202,21 +202,29 @@
       font-size: 11px;
       margin-top: 8px;
     }
-    /* 棚カードのレイアウトと表示 */
-    .shelf-card{
-      display:flex; align-items:center; justify-content:space-between; gap:12px;
-    }
+    /* 棚カードのラベルを約2倍に */
     .shelf-label{
-      font-size:14px; color:var(--sub); margin:0;
+      margin:0;
+      color:var(--sub);
+      font-weight:700;
+      font-size: clamp(18px, 3.5vw, 28px); /* ≒通常h4の2倍 */
     }
+
+    /* LOC（値）は右寄せ＆大きく（約3倍） */
     .shelf-value{
-      margin-left:auto;            /* 右側へ寄せる */
-      text-align:right;            /* テキスト右寄せ */
+      margin-left:auto;
+      text-align:auto;
       font-weight:800;
-      /* 約3倍のサイズ（可変にしつつ最大42px程度） */
-      font-size: clamp(28px, 6vw, 42px);
+      font-size: clamp(28px, 4vw, 32px);
       letter-spacing:.02em;
       padding:2px 0;
+    }
+
+    /* 取得中など muted の場合も右側に寄せる */
+    .shelf-card .muted{
+      margin-left:auto; 
+      text-align:auto; 
+      font-size:16px;
     }
 
   </style>
@@ -271,7 +279,7 @@
       </div>
 
       <div class="card shelf-card">
-        <h4 class="shelf-label">棚 探すべき棚</h4>
+        <h4 class="shelf-label">探すべき棚：</h4>
         <div id="currentShelf" class="shelf-value">（URL未指定）</div>
       </div>
 
@@ -795,8 +803,7 @@
         if (loc) {
           state.currentShelf = loc;
           DOM.currentShelf.textContent = loc;
-         // 右寄せ・大き文字のクラスを維持
-          DOM.currentShelf.className = 'shelf-value';
+          DOM.currentShelf.className = 'chip loc';
           success = true;
           promptScanShelf();
         } else {
