--- a/public/find-die.html
+++ b/public/find-die.html
@@ -213,7 +213,7 @@
     /* LOC（値）は右寄せ＆大きく（約3倍） */
     .shelf-value{
       margin-left:auto;
-      text-align:auto;
+      text-align:right;
       font-weight:800;
       font-size: clamp(28px, 4vw, 32px);
       letter-spacing:.02em;
